feat: app.js; updated swagger config
